[BUGFIX] Fix checkbox alignment when in compact-mode

--- a/src/styles/_knob.scss
+++ b/src/styles/_knob.scss
@@ -2,7 +2,7 @@
   &[data-flow='compact']{
     .knobs__knob__toggle{
       align-self: flex-start;
-      margin-top: var(--knobs-gap, 6px);
+      margin-top: calc(var(--knobs-gap, 6px) + 2px);
     }
   }
 
